--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
           { icon: "🛡️", text: "Antioxidant powerhouse", detailed: "ORAC value of 4200 μmol TE/100g. Contains lutein, zeaxanthin, and beta-carotene for cellular protection." },
           { icon: "🍃", text: "Digestive enzyme rich", detailed: "Contains amylase and lipase enzymes that aid in breaking down starches and fats, improving nutrient absorption by 25%." }
         ],
-        image: "https://images.unsplash.com/photo-1628773822990-202d530ac35c?w=400&h=300&fit=crop",
+        image: "https://short-link.me/18OoG",
         icon: "🌱"
       },
       {
@@ -789,7 +789,7 @@
           { icon: "⚡", text: "Antioxidant density: 3800 ORAC", detailed: "Higher antioxidant activity than blueberries. Contains anthocyanins and isothiocyanates for cellular protection." },
           { icon: "🫀", text: "Cholesterol reducer", detailed: "Clinical studies show 18% reduction in LDL cholesterol when consumed daily for 4 weeks." }
         ],
-        image: "https://images.unsplash.com/photo-1571740437509-0d1b7c2e5a2b?w=400&h=300&fit=crop",
+        image: "https://short-link.me/18OlZ",
         icon: "🥬"
       },
       {
@@ -805,7 +805,7 @@
           { icon: "🌻", text: "Vitamin E: 35mg per 100g", detailed: "233% of daily vitamin E requirement. Most bioavailable form (alpha-tocopherol) for maximum antioxidant benefit." },
           { icon: "❤️", text: "Reduces heart disease risk by 32%", detailed: "Phytosterols content (200mg/100g) shown to lower cardiovascular disease risk in peer-reviewed studies." }
         ],
-        image: "https://images.unsplash.com/photo-1631207750959-e07af3d8d566?w=400&h=300&fit=crop",
+        image: "https://short-link.me/14v4N",
         icon: "🌻"
       },
       {
@@ -837,7 +837,7 @@
           { icon: "🧬", text: "Folate source" },
           { icon: "💪", text: "Bone health support" }
         ],
-        image: "https://images.unsplash.com/photo-1612966748896-5c5b2b1e5b2b?w=400&h=300&fit=crop",
+        image: "https://short-link.me/14v7n",
         icon: "🌿"
       },
       {
@@ -853,7 +853,7 @@
           { icon: "🌟", text: "Vitamin K abundance" },
           { icon: "👁️", text: "Eye health support" }
         ],
-        image: "https://images.unsplash.com/photo-1622286346003-c3d9c4d4e1e5?w=400&h=300&fit=crop",
+        image: "https://short-link.me/18Onc",
         icon: "🥬"
       }
     ];
@@ -990,7 +990,7 @@
       {
         name: "Fresh Cucumbers",
         description: "Crisp, organic cucumbers perfect for salads and fresh consumption",
-        image: "https://images.unsplash.com/photo-1449300079323-02e209d9d3a6?w=400&h=300&fit=crop",
+        image: "https://n9.cl/lt7tx",
         icon: "🥒",
         retailPrice: "₹40",
         wholesalePrice: "₹30/kg (50kg+)",
@@ -1005,7 +1005,7 @@
       {
         name: "Aloe Vera Plants",
         description: "Fresh aloe vera plants for medicinal and cosmetic use",
-        image: "https://images.unsplash.com/photo-1598944572623-b345b4f59a5a?w=400&h=300&fit=crop",
+        image: "https://short-link.me/18OjP",
         icon: "🌿",
         retailPrice: "₹150",
         wholesalePrice: "₹120/plant (50+)",
@@ -1020,7 +1020,7 @@
       {
         name: "Vetiver Roots",
         description: "Aromatic vetiver roots for natural cooling and fragrance",
-        image: "https://images.unsplash.com/photo-1594736797933-d0c0c5d6b9d8?w=400&h=300&fit=crop",
+        image: "https://short-link.me/18Ok2",
         icon: "🌾",
         retailPrice: "₹200",
         wholesalePrice: "₹160/bundle (25+)",
@@ -1035,7 +1035,7 @@
       {
         name: "Bell Peppers",
         description: "Colorful, sweet bell peppers rich in vitamins",
-        image: "https://images.unsplash.com/photo-1563565375-f3fdfdbefa83?w=400&h=300&fit=crop",
+        image: "https://short-link.me/14v4q",
         icon: "🫑",
         retailPrice: "₹80",
         wholesalePrice: "₹65/kg (25kg+)",
