--- a/index.html
+++ b/index.html
@@ -281,18 +281,17 @@
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center py-4">
                 <!-- Logo with Logo Text -->
-                <div class="flex items-center space-x-3">
-                    <div class="flex items-center">
-                        <!-- Logo Image -->
-                        <img src="https://image2url.com/r2/bucket3/images/1766859896063-c981266a-60aa-4f65-a256-422f62d92866.png" 
-                            alt="NVH Agri Green Logo" 
-                            class="h-12 mr-3">
-                        <!-- Logo Text Image -->
-                        <img src="https://image2url.com/r2/bucket3/images/1766859953126-13721dcd-c0cf-4918-8e13-9a8840f63051.png" 
-                            alt="NVH Agri Green" 
-                            class="h-10">
-                    </div>
+                <div class="flex items-center space-x-2">
+                    <!-- Logo Image - Bigger -->
+                    <img src="https://image2url.com/r2/bucket3/images/1766859896063-c981266a-60aa-4f65-a256-422f62d92866.png" 
+                        alt="NVH Agri Green Logo" 
+                        class="h-14 md:h-16">
+                    <!-- Logo Text - Bigger -->
+                    <img src="https://image2url.com/r2/bucket3/images/1766859953126-13721dcd-c0cf-4918-8e13-9a8840f63051.png" 
+                        alt="NVH Agri Green" 
+                        class="h-10 md:h-12">
                 </div>
+            </div>
                 
                 <!-- Navigation -->
                 <nav class="hidden md:flex space-x-6">
