--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -1447,4 +1448,5 @@
         console.log('WhatsApp: +91 9841565965');
     </script>
 </body>
-</html>   
+</html> 
+Replace ALL cards with fluid, breathing organic forms."
